<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Notification Test</string>
    <string name="my_shortcut">Open test app</string>
    <string name="my_shortcut_disabled">Cos test shortcut off</string>
    <string name="sent_noti">Notification sent</string>
    <string name="default_title">Default title</string>
    <string name="default_text">Default notification text</string>
    <string name="noti_desc">Description of this notification is amazing</string>
    <string name="noti_title_hint">Notification name</string>
    <string name="noti_text_hint">Notification text</string>
    <string name="button_text">Send notification</string>
    <string name="test_noti">Test notification</string>
    <string name="send_noti_shortcut">Send test notification</string>
    <string-array name="queriesTest" tools:ignore="InconsistentArrays">
        <item>send test notification</item>
        <item>open Notification Test and send test notification</item>
        <item>send notification</item>
        <item>test notification</item>
        <item>open Notification Test and test notification</item>
        <item>test noti</item>
    </string-array>
</resources>