<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <capability
        android:name="custom.actions.intent.SEND_TEST_NOTI1"
        app:queryPatterns="@array/queriesTest">
        <intent
            android:action="custom.actions.intent.SEND_TEST_NOTI"
            android:targetPackage="com.example.notitest"
            android:targetClass="com.example.notitest.MainActivity"
            />
    </capability>
    <shortcut
        android:shortcutId="openappshortcut"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/my_shortcut"
        android:shortcutLongLabel="@string/my_shortcut"
        android:shortcutDisabledMessage="@string/my_shortcut_disabled">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example.notitest"
            android:targetClass="com.example.notitest.MainActivity"
            />
    </shortcut>
    <shortcut
        android:shortcutId="sendnotishortcut"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/send_noti_shortcut"
        android:shortcutLongLabel="@string/send_noti_shortcut"
        android:shortcutDisabledMessage="@string/send_noti_shortcut">
        <intent
            android:action="custom.actions.intent.SEND_TEST_NOTI"
            android:targetPackage="com.example.notitest"
            android:targetClass="com.example.notitest.MainActivity"

            />

    </shortcut>
</shortcuts>